# HadoopTalk

./: README.md
ImpalaUDF/: CMakeLists.txt  ImpalaJniUDF.cpp  README.txt
